--- a/CarService/CarServiceView/CarServiceView.csproj
+++ b/CarService/CarServiceView/CarServiceView.csproj
@@ -8,4 +8,17 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.4">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CarServiceContracts\CarServiceContracts.csproj" />
+    <ProjectReference Include="..\CarServiceDatabaseImplement\CarServiceDatabaseImplement.csproj" />
+  </ItemGroup>
+
 </Project>
