Реализация бизнесс-логики

--- a/CarService/CarServiceView/CarServiceView.csproj
+++ b/CarService/CarServiceView/CarServiceView.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CarServiceBusinessLogic\CarServiceBusinessLogic.csproj" />
     <ProjectReference Include="..\CarServiceContracts\CarServiceContracts.csproj" />
     <ProjectReference Include="..\CarServiceDatabaseImplement\CarServiceDatabaseImplement.csproj" />
   </ItemGroup>
