--- a/CarService/CarServiceView/App.config
+++ b/CarService/CarServiceView/App.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<appSettings>
-		<add key="connect" value="Host=192.168.56.101;Port=5432;Database=carservice;Username=notscream;Password=user" />
+		<add key="connect" value="Host=192.168.56.102;Port=5432;Database=carservice;Username=notscream;Password=user" />
+		<add key="connectMongoDB" value="mongodb://127.0.0.1:27017" />
 	</appSettings>
 </configuration>
